# Webhooks

./: .env.example  .gitmodules  banned_ips.json  main.py  pyproject.toml  tox.ini  web.py
docs/: api.md  pmsg.md
src/: bot.py  database.py  main.py  web.py
templates/: index.html
web/: index.html  script.js  styles.css
