[tool.poetry]
name = "webhooks"
version = "0.1.0"
description = ""
authors = ["ShowierData9978 <mellfang36@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
meowerbot = "^3.1.0.post1"
sanic = "^23.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
